--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+click==8.1.3
 torch
 git+https://github.com/huggingface/transformers.git
 datasets
 evaluate
 git+https://github.com/huggingface/peft.git
 bitsandbytes
+wandb
