--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-click==8.1.3
 torch
-git+https://github.com/huggingface/transformers.git
+transformers
 datasets
 evaluate
-git+https://github.com/huggingface/peft.git
-bitsandbytes
 wandb
-protobuf
 icecream
+fire
+tensorboard
