--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch==2.1.0
+torch
 transformers
 datasets
 evaluate
@@ -9,3 +9,4 @@ tensorboard
 safetensors
 huggingface_hub
 sentencepiece
+vllm
