--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ sentencepiece
 vllm
 lightning_utilities
 lightning
-# may have to install autoawq from wheel, like  https://github.com/casper-hansen/AutoAWQ/releases/download/v0.1.6/autoawq-0.1.6+cu118-cp310-cp310-linux_x86_64.whl
+# may have to install autoawq from wheel, like pip install https://github.com/casper-hansen/AutoAWQ/releases/download/v0.1.6/autoawq-0.1.6+cu118-cp310-cp310-linux_x86_64.whl
 autoawq
+# also pip3 install -U xformers --index-url https://download.pytorch.org/whl/cu118
