--- a/.gitignore
+++ b/.gitignore
@@ -165,4 +165,7 @@ lightning_logs
 wandb/
 wandb/latest-run
 submit_train_t5.sh
+submit_upsample_captions.sh
 *.out.*
+latest-run
+upsampled_new_prompts.csv
