--- a/.gitignore
+++ b/.gitignore
@@ -164,8 +164,6 @@ typings
 lightning_logs
 wandb/
 wandb/latest-run
-submit_train_t5.sh
-submit_upsample_captions.sh
 *.out.*
 latest-run
 upsampled_new_prompts.csv
@@ -173,3 +171,4 @@ train_cache
 val_cache
 *.csv
 *.txt
+submit.sh
