wip cache updates

--- a/.gitignore
+++ b/.gitignore
@@ -167,8 +167,7 @@ wandb/latest-run
 *.out.*
 latest-run
 upsampled_new_prompts.csv
-train_cache
-val_cache
 *.csv
 *.txt
 submit.sh
+dataset_cache/*
