--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ tensorboard
 safetensors
 huggingface_hub
 sentencepiece
-lightning_utilities
-lightning
+lightning==2.2.0
+torchmetrics==1.2.1
 einops
 pydantic==2.5.2
 tabulate==0.9.0
