--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ wandb
 fire
 tensorboard
 safetensors
-huggingface_hub==0.19.4
+huggingface_hub==0.20.3
 sentencepiece
 lightning==2.2.0
 torchmetrics==1.2.1
@@ -17,3 +17,4 @@ python-dotenv==1.0.1
 vllm==0.2.7
 fsspec==2023.10.0
 nltk==3.8.1
+diffusers==0.26.3
