--- a/.gitignore
+++ b/.gitignore
@@ -170,7 +170,8 @@ upsampled_new_prompts.csv
 *.csv
 *.txt
 submit.sh
-dataset_cache/*
+dataset_cache_parti/*
+dataset_cache_llava/*
 *.parquet
 
 samples/*
