--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,9 @@ einops
 pydantic==2.5.2
 tabulate==0.9.0
 python-dotenv==1.0.1
-vllm==0.2.7
 fsspec==2023.10.0
 nltk==3.8.1
 diffusers==0.26.3
 accelerate
 matplotlib
-clip
+openai
