--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,8 @@ dataset_cache_llava/*
 
 samples/*
 dataset_caches/*
+dataset_samples/*
 submit.sh
 submit_datagen.sh
+
+seed_data_files/categories.csv
