data commons wip

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,7 @@ dependencies = [
     "pytest",
     "kaggle",
     "datacommons",
-    "google-generativeai"
+    "google-generativeai",
+    "datacommons-pandas>=0.0.3",
+    "ipykernel>=6.29.5",
 ]
