humaneval code execution

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,6 @@ dependencies = [
     "google-generativeai",
     "datacommons-pandas>=0.0.3",
     "ipykernel>=6.29.5",
+    "transformers>=4.40.2",
+    "torch>=2.4.1",
 ]
