--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,4 +39,20 @@ dependencies = [
     "ninja>=1.11.1.1",
     "packaging>=24.1",
     "bitsandbytes>=0.44.1",
+    "peft>=0.13.2",
+    "torch==2.5.1+cu121",
+    "torchaudio==2.5.1+cu121",
+    "torchvision==0.20.1+cu121",
 ]
+
+
+[tool.uv.sources]
+torch = { index = "pytorch-cu121" }
+torchvision = { index = "pytorch-cu121" }
+torchaudio = { index = "pytorch-cu121" }
+
+[[tool.uv.index]]
+name = "pytorch-cu121"
+url = "https://download.pytorch.org/whl/cu121"
+explicit = true
+
