--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "packaging>=24.1",
     "fastapi>=0.115.5",
     "uvicorn>=0.32.1",
-    "gradio>=5.7.1",
+    "gradio",
+    "scipy",
 ]
 
 [project.optional-dependencies]
