--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,6 @@ dependencies = [
     "fire",
     "tensorboard",
     "huggingface_hub",
-    "sentencepiece",
-    "einops",
     "pydantic==2.6.3",
     "tabulate==0.9.0",
     "python-dotenv==1.0.1",
@@ -40,6 +38,7 @@ dependencies = [
     "uvicorn>=0.32.1",
     "gradio",
     "scipy",
+    "pyright>=1.1.390",
 ]
 
 [project.optional-dependencies]
@@ -52,6 +51,8 @@ torch_deps = [
     "bitsandbytes>=0.44.1",
     "peft>=0.13.2",
     "trl>=0.12.0",
+    "sentencepiece",
+    "einops",
 ]
 
 [tool.uv.sources]
