--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "trl>=0.12.0",
     "sentencepiece",
     "einops",
+    # add vllm if needed for evals
 ]
 
 [tool.uv.sources]
