--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,11 +42,11 @@ dependencies = [
     "google-genai>=0.2.0",
     # pytorch deps
     "transformers==4.46.2",
-    "torch==2.5.1+cu121",
-    "torchaudio==2.5.1+cu121",
-    "torchvision==0.20.1+cu121",
-    "flash-attn>=2.7.0.post2",
-    "bitsandbytes>=0.44.1",
+    "torch==2.5.1",
+    "torchaudio==2.5.1",
+    "torchvision==0.20.1",
+    "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
+    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "peft>=0.13.2",
     "trl>=0.12.0",
     "sentencepiece",
@@ -55,9 +55,12 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = { index = "pytorch-cu121" }
-torchvision = { index = "pytorch-cu121" }
-torchaudio = { index = "pytorch-cu121" }
+torch = [
+    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
+]
+torchvision = { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }
+torchaudio = { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }
+
 
 [[tool.uv.index]]
 name = "pytorch-cu121"
