--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ dependencies = [
     # add vllm if needed for evals
     "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
     "bitsandbytes>=0.44.1; sys_platform == 'linux'",
+    "mistune>=3.1.0",
 ]
 
 [tool.uv.sources]
