--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
     "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "mistune>=3.1.0",
+    "ruff>=0.8.1",
 ]
 
 [tool.uv.sources]
