--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,11 @@
             "program": "train_trl.py",
             "console": "integratedTerminal",
             "justMyCode": false,
-            "args": ["--notebook_mode", "--config", "codecontests_sft"]
+            "args": [
+                "--notebook_mode",
+                "--config",
+                "codecontests_sft"
+            ]
         },
         {
             "name": "Inference Server",
