refactor dataset args, playwright stuff

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
             "args": [
                 "--notebook_mode",
                 "--config",
-                "codecontests_sft"
+                "playwright"
             ]
         },
         {
