--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "pyright>=1.1.390",
     "google-genai>=0.2.0",
     # pytorch deps
-    "transformers==4.47.1",
+    "transformers==4.48.0",
     "torch==2.5.1",
     "torchaudio==2.5.1",
     "torchvision==0.20.1",
@@ -49,12 +49,13 @@ dependencies = [
     "sentencepiece",
     "einops",
     # add vllm if needed for evals
-    "flash-attn>=2.7.0.post2; sys_platform == 'linux'",
+    "flash-attn; sys_platform == 'linux'",
     "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "mistune>=3.1.0",
     "ruff>=0.8.1",
     "chardet>=5.2.0",
     "lightning>=2.5.0.post0",
+    "liger-kernel>=0.5.2",
 ]
 
 [tool.uv.sources]
