--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,13 +63,19 @@ dependencies = [
 
 [tool.uv.sources]
 torch = [
-    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
+    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
 ]
-torchvision = { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }
-torchaudio = { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" }
+torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
+torchaudio = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
 
 
 [[tool.uv.index]]
 name = "pytorch-cu121"
 url = "https://download.pytorch.org/whl/cu121"
+explicit = true
+
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
 explicit = true
