--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,10 @@
             "type": "debugpy",
             "request": "launch",
             "program": "generate.py",
+            "args": [
+                "--task_name",
+                "screenplay_summarize"
+            ],
             "console": "integratedTerminal",
         },
         {
