minor fixes for screenplay

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,7 @@
             "justMyCode": false,
             "args": [
                 "--config",
-                "ultrafeedback",
+                "playwright",
                 "--notebook_mode"
             ]
         },
