--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,9 +65,7 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-torch = [
-    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
-]
+torch = [{ index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }]
 torchvision = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
 torchaudio = { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" }
 
