--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,29 +39,33 @@ dependencies = [
     "scipy",
     "pyright>=1.1.390",
     "google-genai>=0.2.0",
-    # pytorch deps
+    "sentencepiece",
+    "einops",
+    "mistune>=3.1.0",
+    "ruff>=0.8.1",
+    "chardet>=5.2.0",
+    "jsonlines>=4.0.0",
+    "kagglehub>=0.3.6",
+    "seaborn>=0.13.2",
+    "plotting>=0.0.7",
+    "pandas>=2.2.3",
+]
+
+[dependency-groups]
+training = [
+    "setuptools_scm",
+    "cmake",
+    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
+    "liger-kernel>=0.5.2",
+    "flash-attn; sys_platform == 'linux'",
+    "vllm",
     "transformers==4.48.0",
     "torch==2.5.1",
     "torchaudio==2.5.1",
     "torchvision==0.20.1",
     "peft>=0.13.2",
     "trl>=0.12.0",
-    "sentencepiece",
-    "einops",
-    # add vllm if needed for evals
-    "flash-attn; sys_platform == 'linux'",
-    "mistune>=3.1.0",
-    "ruff>=0.8.1",
-    "chardet>=5.2.0",
     "lightning>=2.5.0.post0",
-    # optional
-    # "bitsandbytes>=0.44.1; sys_platform == 'linux'",
-    # "liger-kernel>=0.5.2",
-    "jsonlines>=4.0.0",
-    "kagglehub>=0.3.6",
-    "seaborn>=0.13.2",
-    "plotting>=0.0.7",
-    "pandas>=2.2.3",
 ]
 
 [tool.uv.sources]
