--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,13 +52,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-training = [
-    "setuptools_scm",
-    "cmake",
-    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
-    "liger-kernel>=0.5.2",
-    "flash-attn; sys_platform == 'linux'",
-    "vllm",
+torch = [
     "transformers==4.48.0",
     "torch==2.5.1",
     "torchaudio==2.5.1",
@@ -66,6 +60,15 @@ training = [
     "peft>=0.13.2",
     "trl>=0.12.0",
     "lightning>=2.5.0.post0",
+]
+
+training = [
+    "setuptools_scm",
+    "cmake",
+    "bitsandbytes>=0.44.1; sys_platform == 'linux'",
+    "liger-kernel>=0.5.2; sys_platform == 'linux'",
+    "flash-attn; sys_platform == 'linux'",
+    "vllm",
 ]
 
 [tool.uv.sources]
