--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ dependencies = [
     "fire",
     "tensorboard",
     "huggingface_hub",
-    "pydantic==2.6.3",
     "tabulate==0.9.0",
     "python-dotenv==1.0.1",
     "fsspec==2023.10.0",
@@ -50,6 +49,7 @@ dependencies = [
     "plotting>=0.0.7",
     "pandas>=2.2.3",
     "modal>=0.72.50",
+    "pydantic>=2.10.6",
 ]
 
 [dependency-groups]
