grpo and reasoning

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "justMyCode": false,
             "args": [
                 "--config",
-                "playwright",
+                "qwen-math",
                 "--notebook_mode"
             ]
         },
