--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,8 +51,6 @@ dependencies = [
     "modal>=0.72.50",
     "pydantic>=2.10.6",
     "tiktoken>=0.8.0",
-    "llama-cpp-python[server]>=0.3.7",
-    "gguf>=0.14.0",
 ]
 
 [dependency-groups]
@@ -62,7 +60,7 @@ torch = [
     "torchaudio==2.5.1",
     "torchvision==0.20.1",
     "peft>=0.13.2",
-    "trl>=0.12.0",
+    "trl>=0.14.0",
     "lightning>=2.5.0.post0",
 ]
 
@@ -72,7 +70,10 @@ training = [
     "bitsandbytes>=0.44.1; sys_platform == 'linux'",
     "liger-kernel>=0.5.2; sys_platform == 'linux'",
     "flash-attn; sys_platform == 'linux'",
+    "vllm",
 ]
+
+inference = ["llama-cpp-python[server]>=0.3.7", "gguf>=0.14.0"]
 
 [tool.uv]
 default-groups = ["torch"]
