--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "wandb",
     "fire",
     "tensorboard",
-    "huggingface_hub",
+    "huggingface-hub[hf-transfer]",
     "tabulate==0.9.0",
     "python-dotenv==1.0.1",
     "fsspec==2023.10.0",
