--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ training = [
     "flash-attn; sys_platform == 'linux'",
 ]
 
-inference = ["vllm"]
+inference = ["vllm==0.7.3"]
 
 [tool.uv]
 default-groups = ["torch"]
