--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "program": "generate.py",
             "args": [
                 "--task_name",
-                "writing_reward"
+                "gutenberg_backtranslation"
             ],
         },
         {
