--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -82,7 +82,7 @@
             "args": [
                 "convert_epubs_to_txt",
                 "--root_dir",
-                "~/Documents/epubs"
+                "~/Documents/epubs/scifi"
             ]
         }
     ]
