--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "gradio",
     "scipy",
     "pyright>=1.1.390",
-    "google-genai>=0.2.0",
+    "google-genai==1.5.0",
     "sentencepiece",
     "einops",
     "mistune>=3.1.0",
