--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,9 @@ dependencies = [
 [dependency-groups]
 torch = [
     "transformers",
-    "torch==2.6.0",
-    "torchaudio==2.6.0",
+    "torch==2.5.1",
+    "torchaudio==2.5.1",
+    "torchvision==0.20.1",
     "peft>=0.13.2",
     "trl==0.15.2",
     "lightning>=2.5.0.post0",
@@ -73,7 +74,7 @@ training = [
     "flash-attn; sys_platform == 'linux'",
 ]
 
-inference = ["vllm==0.8.1"]
+inference = ["vllm==0.7.3"]
 
 [tool.uv]
 default-groups = ["torch"]
