--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "matplotlib",
     "openai",
     "unidecode",
-    "anthropic",
+    "anthropic==0.49.0",
     "pillow==10.4.0",
     "loguru",
     "webdataset",
