rework vllm, working now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "plotting>=0.0.7",
     "pandas>=2.2.3",
-    "modal>=0.72.50",
+    "modal==0.73.135",
     "pydantic>=2.10.6",
     "tiktoken",
     "sigstore>=1.0.0",
