--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,13 +45,15 @@ dependencies = [
     "seaborn>=0.13.2",
     "plotting>=0.0.7",
     "pandas>=2.2.3",
-    "modal==0.73.135",
+    "modal==1.2.4",
     "pydantic>=2.10.6",
     "tiktoken",
     "sigstore>=1.0.0",
     "kagglehub>=0.3.7",
     "nltk>=3.9.1",
     "pytest>=8.3.4",
+    "trio>=0.27.0",
+    "httpx>=0.28.0",
 ]
 
 [tool.pytest.ini_options]
