--- a/synthetic_data/pyproject.toml
+++ b/synthetic_data/pyproject.toml
@@ -27,4 +27,8 @@ dev = [
     "ruff>=0.8.1",
     "pytest>=8.3.4",
     "ty>=0.0.4",
+    "ipywidgets>=8.1.1",
 ]
+
+[tool.uv]
+default-groups = ["dev"]
