--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "webdataset",
     "wheel",
     "rich>=13.9.2",
+    "textual>=0.89.1",
     "polars>=1.12.0",
     "ninja>=1.11.1.1",
     "packaging>=24.1",
